[tool.poetry]
name = "overmind-sdk"
version = "0.1.34"
description = "Python client for Overmind API"
authors = ["Overmind Ltd"]
readme = "README.md"
packages = [{include = "overmind_sdk"}]
homepage = "https://github.com/overmind-core/overmind-python"
repository = "https://github.com/overmind-core/overmind-python"
keywords = ["overmind", "ai", "api", "client", "policy", "enforcement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
requests = "^2.31.0"
pydantic = "^2.0.0"
rich = "^14.0.0"
opentelemetry-api = "^1.35.0"
opentelemetry-sdk = "^1.35.0"
langgraph = ">=1.0.10"
opentelemetry-exporter-otlp-proto-http = "^1.35.0"
opentelemetry-instrumentation-fastapi = "^0.60b1"
# Dependencies for vendored opentelemetry-instrumentation-openai (patched)
opentelemetry-instrumentation = ">=0.60b1"
opentelemetry-semantic-conventions = ">=0.60b1"
opentelemetry-semantic-conventions-ai = "^0.4.13"
wrapt = "^1.14.0"
typing-extensions = "^4.0.0"
packaging = "^23.0"
# Optional: additional instrumentations for richer traces
opentelemetry-instrumentation-requests = "^0.60b1"
opentelemetry-instrumentation-httpx = "^0.60b1"
opentelemetry-instrumentation-logging = "^0.60b1"
tqdm = "^4.67.3"
overmind-instrumentation-anthropic = "^0.53.0"
overmind-instrumentation-google-generativeai = "^0.53.0"
overmind-instrumentation-agno = "^0.53.0"
overmind-instrumentation-openai = "^0.53.1"
opentelemetry-overmind = "^0.53.0"

[tool.poetry.extras]
full = [
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
]


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.4.4"
fastapi = "*"
openai = "^2.26.0"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
include = ["overmind_sdk/**/*.py", "tests/**/*.py"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
